09-Feb-2016 Fixes #92. Package XML definition files that do not satisfy the schema syntax now identifies the error by description and location on the terminal.

09-Feb-2016 Fixes #93. Feedback is now provided on the terminal when a package is successfully made.

08-Feb-2016 ======== Version 1.0.1b2 Release ========

08-Feb-2016 Fixes #132. Parsing C source files for header includes no longer tries to match whitespace between the quotes or angle brackets. Without that, any trailing inline comments containing quotes or angle brackets would be included in the regex match. (Assume header files containing spaces are the exception, rather than the rule.)

08-Feb-2016 Fixes #128. Added C.ProceduralHeaderFile abstract module class, which can be derived from to generate header files for a build. Properties that can be overridden are OutputFile (the header path), Contents (the contents of the header - the guard is automatically written), and GuardText (an optional override to the header inclusion guard, otherwise the basename of the header). The header is always generated as part of the bam build - it is not converted to IDE projects. Added test ProceduralHeaderTest1.

08-Feb-2016 Fixes #131. Parsing C source files for header includes now accepts both quotes and angle bracket syntax. Previously, only quoted paths were searched, since the assumption was that angle brackets were for system headers, and thus invariant.
